--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "js-primer",
   "version": "1.0.0",
-  "private" :"true",
+  "private": "true",
   "description": "",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha nodecli/test/"
   },
   "repository": {
     "type": "git",
@@ -18,5 +18,10 @@
   "homepage": "https://github.com/mizobuchiy/js-primer#readme",
   "devDependencies": {
     "eslint": "^7.9.0"
+  },
+  "dependencies": {
+    "commander": "^5.0.0",
+    "marked": "^1.0.0",
+    "mocha": "^7.2.0"
   }
 }
